--- a/block-BHaaax/style.css
+++ b/block-BHaaax/style.css
@@ -47,58 +47,53 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-/*custom styles*/
+/*custom style*/
 body {
-	background-color: aliceblue;
-	font-family: "Open Sans", sans-serif;
-	line-height: 1.5;
-	font-size: 24px;
-	color: #fff;
+    background-color: aliceblue;
+    font-family: "Open Sans", sans-serif;
+    line-height: 1.5;
+    font-size: 24px;
+    color: #fff;
 }
-header, main, footer {
-	padding: 50px;
-	border: 1px solid;
-	color: #000;
+header,main,footer {
+    padding: 50px;
+    border: 1px solid;
+    color: #000;
 }
 main {
-	background-color: aquamarine;
-	padding: 60px;
+    background-color: aquamarine;
+    padding-top:40px;
 }
 header, footer {
-	background-color: #22396A;
+    background-color: #22396A;
 }
 .logo {
-	font-size: 40px;
-	color: white;
-	line-height: 80px;
-	padding: 0 80px;
-	font-weight: bold;
+    font-size: 40px;
+    color: white;
+    line-height: 80px;
+    padding: 0 80px;
+    font-weight: bold;
 }
 .a {
-	float: right;
-	margin-right: 50px; 
-	line-height: 10px;
-	text-decoration: none;
-	color: white;
-	font-size: 25px;
+    float: right;
+    margin-right: 50px;
+    line-height: 10px;
+    text-decoration: none;
+    color: white;
+    font-size: 25px;
 }
 .h2 {
-	font-size: 35px;
+    font-size: 35px;
 }
 .article {
-	margin-bottom: 30px;
+    margin: 30px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 .section1 {
-	width:400px;
-	float: left;
-    margin: 50px;
-	margin-bottom: 30px;
+    margin: 40px;
 }
 .section2 {
-	width: 350px;
-	float:left;
-    margin: 50px;
+    margin: 40px;
+
 }
-
-
-
