hello  world project

--- a/block-BHaaax/style.css
+++ b/block-BHaaax/style.css
@@ -71,8 +71,8 @@ header, footer {
     font-size: 40px;
     color: white;
     line-height: 80px;
-    padding: 0 80px;
     font-weight: bold;
+    display: inline-block;
 }
 .a {
     float: right;
@@ -82,18 +82,26 @@ header, footer {
     color: white;
     font-size: 25px;
 }
+nav {
+    display: inline-block;
+    width: 90%;
+}
 .h2 {
     font-size: 35px;
 }
 .article {
     margin: 30px;
-    margin-top: 5px;
-    margin-bottom: 5px;
 }
 .section1 {
-    margin: 40px;
+    display: inline-block;
+    width: 47%;
 }
 .section2 {
-    margin: 40px;
+    display: inline-block;
+    width: 47%;
 
+}
+img {
+    width: 100%;
+    margin-left: 35px;
 }
